--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -71,9 +71,13 @@
   }
 }
 
-body.product_line, body.product {
+body.product_line, body.product, body.world_flute {
   div.amber {
     padding: 40px 0;
+
+    .callout {
+      margin-top: 2rem;
+    }
   }
   .amber h4 {
     color: white;
