--- a/_jekyll/_includes/product.html
+++ b/_jekyll/_includes/product.html
@@ -14,21 +14,25 @@
 
       <h4>{{ product.price | times:100 | money }}
 
-        {% for cloudinary_id in product.cloudinary_ids limit:1 %}
-          {% capture thumbnail %}{{ cloudinary_id | cloudinary_url:'a_exif,c_limit,h_100,q_75,w_100' }}{% endcapture %}
-        {% endfor %}
-        <button
-        class="snipcart-add-item button large"
-        data-item-id="{{ product.slug }}"
-        data-item-name="{{ product.title }}"
-        data-item-price="{{ product.price }}"
-        data-item-url="{{ site.url }}{{ product.url }}"
-        data-item-max-quantity="1"
-        data-item-custom1-name="Flute Care Pack"
-        data-item-custom1-options="Not Included|Included +$10[+10.00]"
-        data-item-image="{{ thumbnail }}">
-          <i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to Cart
-        </button>
+        {% unless product.out_of_stock %}
+          {% for cloudinary_id in product.cloudinary_ids limit:1 %}
+            {% capture thumbnail %}{{ cloudinary_id | cloudinary_url:'a_exif,c_limit,h_100,q_75,w_100' }}{% endcapture %}
+          {% endfor %}
+          <button
+          class="snipcart-add-item button large"
+          data-item-id="{{ product.slug }}"
+          data-item-name="{{ product.title }}"
+          data-item-price="{{ product.price }}"
+          data-item-url="{{ site.url }}{{ product.url }}"
+          data-item-max-quantity="1"
+          data-item-custom1-name="Flute Care Pack"
+          data-item-custom1-options="Not Included|Included +$10[+10.00]"
+          data-item-image="{{ thumbnail }}">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to Cart
+          </button>
+        {% else %}
+          <em style="font-size: 0.9em;opacity: 0.65">(out of stock)</em>
+        {% endunless %}
       </h4>
 
       {{ product.content }}
