--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -15,6 +15,8 @@
 </div>
 <div class="columns medium-6 links-and-signup">
   <p>
+    <a href="/products" class="button">Products in Stock</a>
+    &nbsp;
     <a href="/headjoints" class="button hollow">Ellis-Korb Headjoints</a>
     &nbsp;
     <a href="/irish-flutes" class="button hollow">Irish Flutes</a>
