--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -614,8 +614,8 @@ $tooltip-radius: $global-radius;
 // 37. Top Bar
 // -----------
 
-$topbar-padding: 0.5rem;
-$topbar-background: #292624;
+$topbar-padding: 0rem;
+$topbar-background: get-color(secondary);
 $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
