--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -139,7 +139,7 @@ body.about {
     color: white;
     width: 60%;
     margin-left: auto !important;
-    margin-right: auto;
+    margin-right: auto !important;
     margin-bottom: 4rem;
     text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
     line-height: 1;
@@ -167,14 +167,14 @@ body.about {
     padding-bottom: 10px;
     width: 40%;
     margin-left: auto;
-    margin-right: 10%;
+    margin-right: auto;
     @include breakpoint(small down) {
       padding-left: 20px;
       padding-right: 20px;
     }
 
     .post-image {
-      @media (min-width: 768px) {
+      @include breakpoint(medium up) {
         margin-left: -20px;
         margin-right: -20px;
       }
