--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -128,34 +128,24 @@ body.about {
     background-image:url(/assets/working-on-headjoints.jpg);
     background-size: cover;
     background-position: center center;
-    padding-top: 20vh;
-    padding-bottom: 10vh;
-
-    @media (max-width: 1300px) {
-      padding-top: 9rem;
-    }
+    padding-top: 9rem;
+    padding-bottom: 30px;
   }
   h1 {
     color: white;
-    width: 60%;
-    margin-left: auto !important;
-    margin-right: auto !important;
     margin-bottom: 4rem;
     text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
     line-height: 1;
 
     @media (max-width: 1300px) {
-      width: 70%;
       margin-bottom: 3rem;
     }
 
     @media (max-width: 1100px) {
-      width: 80%;
       margin-bottom: 2rem;
     }
 
     @media (max-width: 760px) {
-      width: 100%;
       margin-bottom: 2rem;
     }
   }
@@ -165,7 +155,7 @@ body.about {
     color: white;
     padding: 50px;
     padding-bottom: 10px;
-    width: 40%;
+    width: 65%;
     margin-left: auto;
     margin-right: auto;
     @include breakpoint(small down) {
@@ -185,15 +175,8 @@ body.about {
       }
     }
 
-    @media (max-width: 1300px) {
-      width: 50%;
-    }
-
-    @media (max-width: 1100px) {
-      width: 60%;
-    }
-    @media (max-width: 760px) {
-      width: 80%;
+    @include breakpoint(small down) {
+      width: 90%;
     }
   }
 }
