Mobile tweaks and newsletter signup fixes

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -24,14 +24,13 @@
     <a href="/world-flutes" class="button hollow">World Flutes</a>
   </p>
 
-  <form class="subscribe-newsletter" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="5B5E7037DA78A748374AD499497E309E63343B84B65325393DB5D4503F8C8F42CC792579B0261F03C50F43F2A1B8B874C7542608F5804CB14BB4A41EBEF25097">
+  <form id="footer-signup" class="subscribe-newsletter" action="http://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
     <div>
       <label for="name">Name:</label>  <input id="name" type="text" name="cm-name">
       <label for="pdthjd-pdthjd">Email:</label>  <input id="pdthjd-pdthjd" type="text" name="cm-pdthjd-pdthjd">
       <input type="submit" value="Subscribe to Updates" class="button">
     </div>
   </form>
-  <script type="text/javascript" src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"></script>
 </div>
 </div>
 
