--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -24,7 +24,7 @@
     <a href="/world-flutes" class="button hollow">World Flutes</a>
   </p>
 
-  <form id="footer-signup" class="subscribe-newsletter" action="http://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
+  <form id="footer-signup" class="subscribe-newsletter" action="https://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
     <div>
       <label for="name">Name:</label>  <input id="name" type="text" name="cm-name">
       <label for="pdthjd-pdthjd">Email:</label>  <input id="pdthjd-pdthjd" type="text" name="cm-pdthjd-pdthjd">
