Move irish flutes to world flutes section, added SEO redirects

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -19,9 +19,7 @@
     &nbsp;
     <a href="/headjoints" class="button hollow">Ellis-Korb Headjoints</a>
     &nbsp;
-    <a href="/irish-flutes" class="button hollow">Irish Flutes</a>
-    &nbsp;
-    <a href="/world-flutes" class="button hollow">World Flutes</a>
+    <a href="/world-flutes" class="button hollow">Flutes</a>
   </p>
 
   <form id="footer-signup" class="subscribe-newsletter" action="https://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
