--- a/_jekyll/_includes/nav.html
+++ b/_jekyll/_includes/nav.html
@@ -4,8 +4,7 @@
     <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a></li>
     <li><a href="/products">Products in Stock</a></li>
     <li><a href="/headjoints"><span class="hide-for-small-only">Ellis-Korb</span> Headjoints</a></li>
-    <li><a href="/irish-flutes">Irish Flutes</a></li>
-    <li><a href="/world-flutes">World Flutes</a></li>
+    <li><a href="/world-flutes">Flutes</a></li>
     <li><a href="/about">About Geoffrey</a></li>
     <li><a href="/blog">Shop Notes Blog</a></li>
   </ul>
