New email address for 2019!

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -6,7 +6,7 @@
 <h4><a href="/">Geoffrey Ellis Flutes</a></h4>
 
 <p>
-<a href="mailto:ellisflutes@gmail.com"><i class="fa fa-envelope-o"></i> <span>ellisflutes@gmail.com</span></a>
+<a href="mailto:geoffrey@ellisflutes.com"><i class="fa fa-envelope-o"></i> <span>geoffrey@ellisflutes.com</span></a>
 <br/>
 <a href="https://www.facebook.com/Geoffrey-Ellis-Flutes-Page-1435853706443576/"><i class="fa fa-facebook"></i> <span>Facebook</span></a>
 </p>
