Improved Products in Stock page

--- a/_jekyll/_includes/product.html
+++ b/_jekyll/_includes/product.html
@@ -1,4 +1,4 @@
-<div class="amber">
+<div class="amber" data-category="{{ product.categories[0] }}" style="margin-bottom:2.2em">
   <div class="row">
     <div class="small-12 medium-6 columns">
       {% for cloudinary_id in product.cloudinary_ids %}
