--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -180,3 +180,16 @@ body.about {
     }
   }
 }
+
+button.category-option {
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  background: white;
+  color: #6e5f42;
+  &.category-active {
+    background: #6e5f42;
+    color: white;
+  }
+}
