new facebook link in footer

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -8,7 +8,7 @@
 <p>
 <a href="mailto:geoffrey@ellisflutes.com"><i class="fa fa-envelope-o"></i> <span>geoffrey@ellisflutes.com</span></a>
 <br/>
-<a href="https://www.facebook.com/Geoffrey-Ellis-Flutes-Page-1435853706443576/"><i class="fa fa-facebook"></i> <span>Facebook</span></a>
+<a href="https://www.facebook.com/GeoffreyEllisFlutes"><i class="fa fa-facebook"></i> <span>Facebook</span></a>
 </p>
 
 <p><a href="/terms"><i class="fa fa-file-text-o"></i> <span>Terms of Service</span></a></p>
