--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -19,15 +19,16 @@
   <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/0bfbb00e-91ae-4180-a81f-96945db3b1aa.css"/>
 
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/all.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/css/fa/font-awesome.min.css" />
 
-  <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
   {% if jekyll.environment == "production" %}
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="YjNmOThiNWQtNzQ1Yi00Njg1LTlkMDAtZGJkMjI3ZDg4ZDg3NjM2NzE4ODE0MjU4MDQ4Nzk4" id="snipcart"></script>
   {% else %}
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="NGI4YTYzY2EtNTM4OC00OTA5LTlmMjQtM2FiMGU4ZTMwMzMwNjM2NzE4ODE0MjU4MDQ4Nzk4" id="snipcart"></script>
   {% endif %}
-  <script src="{{ site.baseurl }}/js/foundation.js"></script>
+  
   <script src="{{ site.baseurl }}/js/modernizr.custom.js"></script>
-  <script src="{{ site.baseurl }}/js/app.js"></script>
+  <script src="{{ site.baseurl }}/js/all.js"></script>  
+
