--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 
 @import 'settings';
-@import 'foundation';
-@import 'motion-ui';
+@import "~foundation-sites/scss/foundation.scss";
+@import '~motion-ui/src/motion-ui.scss';
 
 @include foundation-global-styles;
 @include foundation-grid;
