--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -24,9 +24,23 @@
 
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
   {% if jekyll.environment == "production" %}
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="YjNmOThiNWQtNzQ1Yi00Njg1LTlkMDAtZGJkMjI3ZDg4ZDg3NjM2NzE4ODE0MjU4MDQ4Nzk4" id="snipcart"></script>
+    <script
+      src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
+      data-api-key="YjNmOThiNWQtNzQ1Yi00Njg1LTlkMDAtZGJkMjI3ZDg4ZDg3NjM2NzE4ODE0MjU4MDQ4Nzk4"
+      data-cart-custom1-name="I agree to the <a href='https://www.ellisflutes.com/terms/' target='_blank' style='text-decoration:underline'>Terms of Service</a>."
+      data-cart-custom1-options="true|false"
+      data-cart-custom1-required="true"
+      id="snipcart">
+    </script>
   {% else %}
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="NGI4YTYzY2EtNTM4OC00OTA5LTlmMjQtM2FiMGU4ZTMwMzMwNjM2NzE4ODE0MjU4MDQ4Nzk4" id="snipcart"></script>
+    <script
+      src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
+      data-api-key="NGI4YTYzY2EtNTM4OC00OTA5LTlmMjQtM2FiMGU4ZTMwMzMwNjM2NzE4ODE0MjU4MDQ4Nzk4"
+      data-cart-custom1-name="I agree to the <a href='https://www.ellisflutes.com/terms/' target='_blank' style='text-decoration:underline'>Terms of Service</a>."
+      data-cart-custom1-options="true|false"
+      data-cart-custom1-required="true"
+      id="snipcart">
+    </script>
   {% endif %}
   <script src="{{ site.baseurl }}/js/foundation.js"></script>
   <script src="{{ site.baseurl }}/js/modernizr.custom.js"></script>
