Check product stock before purchase

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 
   <link href="//fonts.googleapis.com/css?family=Stoke:300" rel="stylesheet" type="text/css" />
   <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/0bfbb00e-91ae-4180-a81f-96945db3b1aa.css"/>
