All new Bamboo-based web component

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -50,6 +50,7 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
+//@import 'bamboo';
 @import 'global';
 @import 'cart';
 @import 'pages';
