--- a/frontend/styles/_homepage.scss
+++ b/frontend/styles/_homepage.scss
@@ -185,40 +185,27 @@ div.columns.top-padding {
   }
 }
 
-/* Slidehow */
+/* ** Bamboo Related ** */
+:root {
+  --bamboo-dot-inactive: rgba(150, 150, 150, 0.5);
+  --bamboo-dot-active: #f1c363;
+}
 
-.slideshow-container {
+bamboo-slideshow {
   height: 500px;
   height: 79vw;
-  overflow: hidden;
-  position: relative;
-//  border-bottom: 6px solid #f1c363;
+
+  .slides { // wait until they appear in the light DOM
+    visibility: hidden;
+  }
 }
-/* @media (max-width: 600px) {
-  .slideshow-container {
-    height: 70vw;
+
+/*@media (max-width: 600px) {
+  bamboo-slideshow::part(dots) {
+    display: none;
   }
 } */
-#cycler{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-#cycler figure{
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  left :0;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  display: none;
-  background-size: cover;
-  background-position: center top;
-}
-#cycler figure.active{z-index:3}
-#cycler figure.base{z-index:-1;position:static;display:block}
+
 
 /* ** Animations ** */
 
