Rename to Store

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -15,7 +15,7 @@
 </div>
 <div class="columns medium-6 links-and-signup">
   <p>
-    <a href="/products" class="button">Products in Stock</a>
+    <a href="/products" class="button">Store</a>
     &nbsp;
     <a href="/headjoints" class="button hollow">Ellis-Korb Headjoints</a>
     &nbsp;
