--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a></li>
-    <li><a href="/products">Products in Stock</a></li>
+    <li><a href="/store">Store</a></li>
     <li><a href="/headjoints"><span class="hide-for-small-only">Ellis-Korb</span> Headjoints</a></li>
     <li><a href="/world-flutes">Flutes</a></li>
     <li><a href="/about">About Geoffrey</a></li>
