--- a/src/_layouts/product_line.html
+++ b/src/_layouts/product_line.html
@@ -28,7 +28,7 @@
       {% assign products = site.products | where: "categories", page.product_category %}
       {% if products.size > 0 %}
         <hr />
-        <h2 class="text-center">Products In Stock</h2>
+        <h2 class="text-center">Store</h2>
         <hr />
         <br/><br/>
 
