Upgrade Bridgetown, relocate Headjoints, other fixes

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -15,11 +15,11 @@
 </div>
 <div class="columns medium-6 links-and-signup">
   <p>
-    <a href="/products" class="button">Store</a>
+    <a href="/products" class="button hollow">Shop for Flutes</a>
     &nbsp;
-    <a href="/headjoints" class="button hollow">Ellis-Korb Headjoints</a>
+    <a href="/world-flutes" class="button hollow">Types of Flutes</a>
     &nbsp;
-    <a href="/world-flutes" class="button hollow">Flutes</a>
+    <a href="/custom-order" class="button hollow">Custom Order</a>
   </p>
 
   <form id="footer-signup" class="subscribe-newsletter" action="https://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
@@ -37,5 +37,5 @@
 <!-- open/close -->
 <div class="overlay overlay-scale">
   <button type="button" class="overlay-close">Close</button>
-  {% include nav.html %}
+  {% render "nav" %}
 </div>
