Add bamboo flutes section and a few other tweaks

--- a/frontend/styles/_homepage.scss
+++ b/frontend/styles/_homepage.scss
@@ -120,6 +120,11 @@ div.amber, div.blue {
       border-bottom: none;
     }
   }
+
+  .button.hollow.white:hover, .button.hollow.white:focus {
+    border-color: $light-gold;
+    color: $light-gold;
+  }
 }
 
 div.blue-tag {
