--- a/frontend/styles/_settings.scss
+++ b/frontend/styles/_settings.scss
@@ -63,6 +63,7 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #222;
 $white: #fefefe;
+$light-gold: #ffeedd;
 $body-background: #eaf5ff;
 $body-font-color: map-get($foundation-palette, secondary);
 $body-font-family: "Bazhanov W01", serif;
