--- a/src/_components/nav.liquid
+++ b/src/_components/nav.liquid
@@ -4,6 +4,7 @@
     <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a></li>
     <li><a href="/products">Store</a></li>
     <li><a href="/world-flutes">Flutes</a></li>
+    <li><a href="/world-flutes/bamboo">Bamboo Flutes</a></li>
     <li><a href="/about">About Geoffrey</a></li>
     <li><a href="/blog">Shop Notes Blog</a></li>
   </ul>
