--- a/frontend/styles/_global.scss
+++ b/frontend/styles/_global.scss
@@ -18,8 +18,6 @@
       margin-left: auto;
     }
   }
-  &.with-right-space {
-  }
 }
 
 @media (min-width: 900px) {
@@ -71,15 +69,11 @@ nav {
       padding: 0;
       display: inline-block;
       a {
-//        font-family: sans-serif;
         font-weight: 600;
         font-size: 1.1em;
       }
     }
   }
-}
-
-body {
 }
 
 body > header.top {
@@ -132,7 +126,7 @@ body > header.top {
       margin-top: 0.3em;
       li {
         a {
-          color: #ffeedd;
+          color: $light-gold;
           padding-bottom: 3px;
           border-bottom: 4px solid rgba(255,255,255,0.25);
         }
@@ -256,10 +250,6 @@ button, input, optgroup, select, textarea {
   top: 10%;
   height: 70%;
 
-/*	top: 50%;
-	height: 70%;
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%); */
 }
 
 .overlay ul {
@@ -286,6 +276,7 @@ button, input, optgroup, select, textarea {
 	font-weight: 300;
 	display: block;
 	color: #fff;
+  text-shadow: 0px 1px 3px rgba(0,0,0,0.3);
 	-webkit-transition: color 0.2s;
 	transition: color 0.2s;
   @media (max-width: 639px) {
@@ -295,7 +286,7 @@ button, input, optgroup, select, textarea {
 
 .overlay ul li a:hover,
 .overlay ul li a:focus {
-	color: #f0f0f0;
+	color: #ffeeaa;
 }
 
 /* Effects */
