--- a/frontend/styles/_pages.scss
+++ b/frontend/styles/_pages.scss
@@ -5,12 +5,12 @@
   .large-up-2 & {
     width: 100%;
   }
-  max-width: 500px;
+  max-width: 600px;
   @media (min-width: 1100px) {
-    max-width: 575px;
+    max-width: 675px;
   }
   @media (min-width: 1550px) {
-    max-width: 675px;
+    max-width: 875px;
   }
   padding: 40px;
 
@@ -177,6 +177,11 @@ body.about {
 
     @include breakpoint(small down) {
       width: 90%;
+    }
+
+    .button.hollow.white:hover, .button.hollow.white:focus {
+      border-color: $light-gold;
+      color: $light-gold;
     }
   }
 }
