--- a/frontend/styles/_pages.scss
+++ b/frontend/styles/_pages.scss
@@ -25,7 +25,7 @@
     margin-bottom: 1rem;
   }
 
-  p + h3:before {
+  p + h3:before, details + h3:before, details-preamble {
     content: ' ';
     display: block;
     border-top: 20px solid map-get($foundation-palette, secondary);
@@ -37,6 +37,30 @@
   }
   h3 {
     margin-bottom: 1.5rem;
+  }
+  
+  details > summary {
+    cursor: pointer;
+    margin-bottom: 0.9rem;
+    border-bottom: 2px solid transparent;
+    -webkit-user-select: none;
+    user-select: none;
+
+    &:focus {
+      outline: none;
+      border-bottom-color: #f1c363;
+    }
+  }
+
+  details h3 {
+    display: inline-block;
+    margin-bottom: 0.75rem;
+    position: relative;
+    top: 6px;
+  }
+
+  details[open] {
+    padding-bottom: 1rem;
   }
 
   p:last-of-type {
