--- a/src/_components/nav.liquid
+++ b/src/_components/nav.liquid
@@ -1,11 +1,21 @@
 <nav>
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a></li>
-    <li><a href="/products">Store</a></li>
-    <li><a href="/world-flutes">Flutes</a></li>
-    <li><a href="/world-flutes/bamboo">Bamboo Flutes</a></li>
-    <li><a href="/about">About Geoffrey</a></li>
-    <li><a href="/blog">Shop Notes Blog</a></li>
+    <li><a href="/">
+      <i class="fa fa-home" aria-hidden="true" style="margin-right:0.25rem"></i> Home</a></li>
+    <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false">
+      <i class="fa fa-shopping-cart" aria-hidden="true" style="margin-right:0.25rem"></i> Checkout</a>
+    </li>
+    <li><a href="/products">
+      <i class="fa fa-chevron-circle-right" aria-hidden="true" style="margin-right:0.25rem"></i> Store</a>
+    </li>
+    <li><a href="/world-flutes">
+      <i class="fa fa-music" aria-hidden="true" style="margin-right:0.25rem"></i> Flutes</a></li>
+    <li><a href="/world-flutes/bamboo">
+      <i class="fa fa-music" aria-hidden="true" style="margin-right:0.25rem"></i> Bamboo Flutes</a>
+    </li>
+    <li><a href="/about">
+      <i class="fa fa-info-circle" aria-hidden="true" style="margin-right:0.25rem"></i> About Geoffrey</a></li>
+    <li><a href="/blog">
+      <i class="fa fa-newspaper-o" aria-hidden="true" style="margin-right:0.25rem"></i> Shop Notes Blog</a></li>
   </ul>
 </nav>
