Use backwards-compatible transforms

--- a/frontend/styles/_pages.scss
+++ b/frontend/styles/_pages.scss
@@ -131,8 +131,7 @@ body.product_line, body.product, body.world_flute {
     transition: all 0.2s ease-out;
 
     &:hover {
-      translate: 0px -6px;
-      scale: 1.03;
+      transform: translate(0px -6px) scale(1.03);
     }
   }
 
@@ -179,8 +178,7 @@ body.product_line, body.product, body.world_flute {
     transition: all 0.2s ease-out;
 
     &:hover {
-      translate: 0px -6px;
-      scale: 1.03;
+      transform: translate(0px -6px) scale(1.03);
     }
   }
 
