Hide bamboo flutes from public eye (temporarily)

--- a/src/_components/nav.liquid
+++ b/src/_components/nav.liquid
@@ -10,9 +10,9 @@
     </li>
     <li><a href="/world-flutes">
       Flutes</a></li>
-    <li><a href="/world-flutes/bamboo">
+<!--    <li><a href="/world-flutes/bamboo">
       Bamboo Flutes</a>
-    </li>
+    </li> -->
     <li><a href="/about">
       About Geoffrey</a></li>
     <li><a href="/blog">
