--- a/frontend/styles/_homepage.scss
+++ b/frontend/styles/_homepage.scss
@@ -196,11 +196,22 @@ div.columns.top-padding {
 
 bamboo-slideshow {
   height: 500px;
-  height: 79vw;
+  height: 69vw;
 
   .slides { // wait until they appear in the light DOM
     visibility: hidden;
   }
+}
+
+bamboo-slideshow::part(caption) {
+  background:rgba(0, 0, 0, 0.35);
+  color: white;
+  padding: 5px 10px;
+  float: right;
+  border-radius: 2rem;
+  margin: 5px;
+  font-weight: bold;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
 }
 
 /*@media (max-width: 600px) {
