--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -24,24 +24,18 @@
 
   <script src="/js/jquery.min.js"></script>
   {% if bridgetown.environment == "production" %}
-    <script
-      src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
-      data-api-key="YjNmOThiNWQtNzQ1Yi00Njg1LTlkMDAtZGJkMjI3ZDg4ZDg3NjM2NzE4ODE0MjU4MDQ4Nzk4"
-      data-cart-custom1-name="I agree to the <a href='https://www.ellisflutes.com/terms/' target='_blank' style='text-decoration:underline'>Terms of Service</a>."
-      data-cart-custom1-options="true|false"
-      data-cart-custom1-required="true"
-      id="snipcart">
-    </script>
+    {% assign snipcart_key = "YjNmOThiNWQtNzQ1Yi00Njg1LTlkMDAtZGJkMjI3ZDg4ZDg3NjM2NzE4ODE0MjU4MDQ4Nzk4" %}
   {% else %}
-    <script
-      src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
-      data-api-key="NGI4YTYzY2EtNTM4OC00OTA5LTlmMjQtM2FiMGU4ZTMwMzMwNjM2NzE4ODE0MjU4MDQ4Nzk4"
-      data-cart-custom1-name="I agree to the <a href='https://www.ellisflutes.com/terms/' target='_blank' style='text-decoration:underline'>Terms of Service</a>."
-      data-cart-custom1-options="true|false"
-      data-cart-custom1-required="true"
-      id="snipcart">
-    </script>
+    {% assign snipcart_key = "NGI4YTYzY2EtNTM4OC00OTA5LTlmMjQtM2FiMGU4ZTMwMzMwNjM2NzE4ODE0MjU4MDQ4Nzk4" %}
   {% endif %}
-  
+  <script
+    src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
+    data-api-key="{{ snipcart_key }}"
+    data-cart-custom1-name="I agree to the <a href='https://www.ellisflutes.com/terms/' target='_blank' style='text-decoration:underline'>Terms of Service</a>."
+    data-cart-custom1-options="true|false"
+    data-cart-custom1-required="true"
+    id="snipcart">
+  </script>
+
   <script src="/js/modernizr.custom.js"></script>
   <script src="{% webpack_path js %}" defer></script>
