--- a/src/_layouts/world_flute.html
+++ b/src/_layouts/world_flute.html
@@ -25,21 +25,7 @@
     </div>
 
     {% if page.product_category == "bamboo" %}
-      {% assign products = site.products | where: "categories", page.product_category %}
-      {% if products.size > 0 %}
-        <br/><br/>
-        <hr />
-        <h2 id="store" class="text-center">Store</h2>
-        <hr />
-        <br/><br/>
-
-        {% for product in products %}
-          <!-- SKU: {{ product.slug }} -->
-          {% render "product", site: site, product: product %}
-        {% endfor %}
-      {% else %}
-        <br/><br/>
-      {% endif %}
+      <p class="text-center" style="margin: 3rem 0"><a href="/products/bamboo" class="button large"><i class="fa fa-shopping-cart"></i> Shop for Bamboo Flutes</a></p>
     {% else %}
       <p class="text-center" style="margin: 3rem 0"><a href="/products" class="button large"><i class="fa fa-shopping-cart"></i> Shop for Flutes</a></p>
     {% endif %}  
